libmpdclient 2.12 (not yet released)
* support MPD protocol 0.21
  - support tag "OriginalDate"
* support MPD protocol 0.20
  - support "plchanges" and "plchangesposid" with range
* support MPD protocol 0.19
  - commands "addtagid", "cleartagid"
  - command "listfiles"
  - tag "AlbumSort"
* use relative #include paths to avoid clashes with other libmpdclient copies
* build with Meson instead of autotools

libmpdclient 2.11 (2017/03/20)
* fix heap corruption with mpd_connection_new_async()
* add space before "window" search argument
* detect getaddrinfo() at configure time
* add support for ArtistSort and AlbumArtistSort tags
* support MPD protocol 0.21
  - audio format specifications "dsd64" etc.
  - the "sort" parameter for commands "find"/"search"

libmpdclient 2.10 (2015/02/23)
* support abstract sockets with "@" prefix
* support tag "MUSICBRAINZ_RELEASETRACKID"
* add TCP keepalive internal and external APIs
* support MPD protocol 0.19
  - status: support sample formats "float" and "dsd"
  - song: report duration with milliseconds precision
  - search: support constraint "modified-since"
* support MPD protocol 0.20
  - the "window" parameter for commands "find"/"search"

libmpdclient 2.9 (2013/10/29)
* directory: support attribute "Last-Modified"
* support MPD protocol 0.18
  - command "readcomments"
  - command "toggleoutput"
  - command "volume"
  - the "base" constraint for commands "find"/"search"

libmpdclient 2.8 (2013/04/09)
* song: support attribute "Prio"
* queue: fix the ranged "prio" command
* queue: support open ranges

libmpdclient 2.7 (2012/02/04)
* status: add nextsong/nextsongid support

libmpdclient 2.6 (2011/10/23)
* mpd/client.h: include message.h
* queue: support song priorities

libmpdclient 2.5 (2011/07/06)
* playlist: implement the command "listplaylists"
* idle: support event "sticker"
* support the client-to-client protocol (MPD 0.17)

libmpdclient 2.4 (2011/01/03)
* configure.ac, resolver: implement flag --disable-tcp